Make "Jump to history" link correctly open in a new tab

--- a/apps/st2-actions/style.less
+++ b/apps/st2-actions/style.less
@@ -46,6 +46,8 @@
 
       flex: 0 20px;
 
+      color: #515151;
+
       i {
         position: absolute;
         top: 50%;
